--- a/Web/views/partials/footer.ejs
+++ b/Web/views/partials/footer.ejs
@@ -22,7 +22,7 @@
             <div class="column is-4">
                 <h4 style="color: white; font-weight: 600; margin-bottom: 1rem; font-size: 0.875rem; text-transform: uppercase; letter-spacing: 0.05em;">Connect</h4>
                 <div style="display: flex; gap: 0.75rem; margin-bottom: 1rem;">
-                    <a href="https://discord.gg/gDtzaS2" target="_blank" rel="noopener" class="button is-small is-outline-modern" title="Discord">
+                    <a href="https://discord.gg/GSZfe5sBp6" target="_blank" rel="noopener" class="button is-small is-outline-modern" title="Discord">
                         <i class="fa fa-comments"></i>
                     </a>
                     <a href="https://github.com/scarecr0w12/CGN-Bot" target="_blank" rel="noopener" class="button is-small is-outline-modern" title="GitHub">
